# rustea

./: Cargo.toml  Design.md  LICENSE  README.md
src/: error.rs  gitea.rs  lib.rs  main.rs  repository.rs  updater.rs
src/gitea/: gitea_api.rs  mod.rs
tests/: test_config.rs  test_gitea_client.rs
