[package]
name = "rustea"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# use derivation
serde = "1.0.126"
serde_derive = "1.0"
serde_json = "1.0"
# Configuration parsing
toml = "0.5"
# Build the Gitea API handler 
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
# Argument parsing
[dependencies.clap]
version = "2.33"
default-features = false
