[package]
name = "rustea"
version = "0.1.2"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
# Enable link time optimization
lto = true
codegen-units = 1
# Don't unwind the stack and remove the code
panic = 'abort'
# Optimize for size; alternatives are 'z' or 's'
opt-level = "z"

[dependencies]
# use derivation
serde = "1.0.126"
serde_derive = "1.0"
serde_json = "1.0"
# Configuration parsing
toml = "0.5"
# Content encoding
base64 = "0.13.0"
# Reqwest alternative for the Gitea API
ureq = { version = "2.1.1", features = ["json"] }
# tokio = { version = "1", features = ["full"] }
# Handle directory access
faccess = "0.2.3"
# Easy self-updater
self_update = "0.27.0"
# Nice table layout
tabwriter = "1.2.1"
# Argument parsing
argh = "0.1.6"
